--- a/pom.xml
+++ b/pom.xml
@@ -1,155 +1,301 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.wenyu</groupId>
-  <artifactId>apollo</artifactId>
-  <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>Apollo Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-	<dependency>
-		<groupId>log4j</groupId>
-		<artifactId>log4j</artifactId>
-		<version>1.2.15</version>
-	</dependency>
-	<dependency>
-		<groupId>commons-logging</groupId>
-		<artifactId>commons-logging</artifactId>
-		<version>1.1.1</version>
-	</dependency>
-	<!-- Spring start -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${dependency.spring.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-aop</artifactId>
-			<version>${dependency.spring.version}</version>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+        <modelVersion>4.0.0</modelVersion>
 
-		</dependency>
+        <groupId>com.wenyu.apollo</groupId>
+        <artifactId>apollo-spring-template</artifactId>
+        <packaging>war</packaging>
+        <version>1.0-SNAPSHOT</version>
 
+        <properties>
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                <spring.framework.version>3.2.0.RELEASE</spring.framework.version>
+                <org.aspectj-version>1.7.0</org.aspectj-version>
+                <org.slf4j-version>1.7.2</org.slf4j-version>
+                <jacksonVersion>1.9.11</jacksonVersion>
+        </properties>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-tx</artifactId>
-			<version>${dependency.spring.version}</version>
+        <dependencies>
+                <dependency>
+                        <groupId>org.hibernate</groupId>
+                        <artifactId>hibernate-entitymanager</artifactId>
+                        <version>4.1.8.Final</version>
+                </dependency>
+                <dependency>
+                        <groupId>cglib</groupId>
+                        <artifactId>cglib-nodep</artifactId>
+                        <version>2.2.2</version>
+                </dependency>
+                <dependency>
+                        <groupId>javax.validation</groupId>
+                        <artifactId>validation-api</artifactId>
+                        <version>1.0.0.GA</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.hibernate</groupId>
+                        <artifactId>hibernate-validator</artifactId>
+                        <version>4.3.1.Final</version>
+                </dependency>
 
-		</dependency>
+                <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-test</artifactId>
+                        <version>${spring.framework.version}</version>
+                        <scope>test</scope>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-context-support</artifactId>
+                        <version>${spring.framework.version}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-aop</artifactId>
+                        <version>${spring.framework.version}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-orm</artifactId>
+                        <version>${spring.framework.version}</version>
+                </dependency>
+                <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>5.1.18</version>
+                </dependency>
+                <dependency>
+                        <groupId>commons-dbcp</groupId>
+                        <artifactId>commons-dbcp</artifactId>
+                        <version>1.3</version>
+                </dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-beans</artifactId>
-			<version>${dependency.spring.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${dependency.spring.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-			<version>${dependency.spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-orm</artifactId>
-			<version>${dependency.spring.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${dependency.spring.version}</version>
-		</dependency>
+                <!-- Spring -->
+                <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-context</artifactId>
+                        <version>${spring.framework.version}</version>
+                        <exclusions>
+                                <!-- Exclude Commons Logging in favor of SLF4j -->
+                                <exclusion>
+                                        <groupId>commons-logging</groupId>
+                                        <artifactId>commons-logging</artifactId>
+                                </exclusion>
+                        </exclusions>
+                </dependency>
+                <dependency>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-webmvc</artifactId>
+                        <version>${spring.framework.version}</version>
+                </dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<version>${dependency.spring.version}</version>
+                <!-- AspectJ -->
+                <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjrt</artifactId>
+                        <version>${org.aspectj-version}</version>
+                </dependency>
 
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${dependency.spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-expression</artifactId>
-			<version>${dependency.spring.version}</version>
-		</dependency>
+                <!-- Logging -->
+                <dependency>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-api</artifactId>
+                        <version>${org.slf4j-version}</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>jcl-over-slf4j</artifactId>
+                        <version>${org.slf4j-version}</version>
+                        <scope>runtime</scope>
+                </dependency>
+                <dependency>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                        <version>${org.slf4j-version}</version>
+                        <scope>runtime</scope>
+                </dependency>
+                <dependency>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                        <version>1.2.15</version>
+                        <exclusions>
+                                <exclusion>
+                                        <groupId>javax.mail</groupId>
+                                        <artifactId>mail</artifactId>
+                                </exclusion>
+                                <exclusion>
+                                        <groupId>javax.jms</groupId>
+                                        <artifactId>jms</artifactId>
+                                </exclusion>
+                                <exclusion>
+                                        <groupId>com.sun.jdmk</groupId>
+                                        <artifactId>jmxtools</artifactId>
+                                </exclusion>
+                                <exclusion>
+                                        <groupId>com.sun.jmx</groupId>
+                                        <artifactId>jmxri</artifactId>
+                                </exclusion>
+                        </exclusions>
+                        <scope>runtime</scope>
+                </dependency>
 
-		<!-- Spring Security -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>${dependency.spring.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<!-- Spring end -->
-		<dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
-        </dependency>
+                <!-- @Inject -->
+                <dependency>
+                        <groupId>javax.inject</groupId>
+                        <artifactId>javax.inject</artifactId>
+                        <version>1</version>
+                </dependency>
 
+                <!-- Servlet -->
+                <dependency>
+                        <groupId>javax.servlet</groupId>
+                        <artifactId>servlet-api</artifactId>
+                        <version>2.5</version>
+                        <scope>provided</scope>
+                </dependency>
+                <dependency>
+                        <groupId>javax.servlet.jsp</groupId>
+                        <artifactId>jsp-api</artifactId>
+                        <version>2.1</version>
+                        <scope>provided</scope>
+                </dependency>
+                <dependency>
+                        <groupId>javax.servlet</groupId>
+                        <artifactId>jstl</artifactId>
+                        <version>1.2</version>
+                        <scope>provided</scope>
+                </dependency>
+                <dependency>
+                        <groupId>org.glassfish.web</groupId>
+                        <artifactId>jstl-impl</artifactId>
+                        <version>1.2</version>
+                </dependency>
+                <dependency>
+                        <groupId>javax.el</groupId>
+                        <artifactId>el-api</artifactId>
+                        <version>2.2</version>
+                        <scope>provided</scope>
+                </dependency>
 
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
-            <scope>provided</scope>
-        </dependency>
+                <dependency>
+                        <groupId>junit</groupId>
+                        <artifactId>junit</artifactId>
+                        <version>4.10</version>
+                        <scope>test</scope>
+                </dependency>
+                <dependency>
+                        <groupId>org.apache.httpcomponents</groupId>
+                        <artifactId>fluent-hc</artifactId>
+                        <version>4.2.5</version>
+                        <scope>test</scope>
+                </dependency>
 
-        <dependency>
-            <groupId>javax.servlet.jsp</groupId>
-            <artifactId>jsp-api</artifactId>
-            <version>2.1</version>
-            <scope>provided</scope>
-        </dependency>
-        
-      	<!-- Logging start -->
-		<!-- Logging end -->
-  	</dependencies>
-  	<build>
-    	<finalName>apollo</finalName>
-  	</build>
-  	<properties>
-		<dependency.spring.version>3.0.5.RELEASE</dependency.spring.version>
-		<dependency.springsecurity.version>3.0.5.RELEASE</dependency.springsecurity.version>
-		<ch.qos.logback.version>1.0.13</ch.qos.logback.version>
-	</properties>
+                <dependency>
+                        <groupId>com.sina</groupId>
+                        <artifactId>sae-local</artifactId>
+                        <version>1.1.0</version>
+                        <scope>system</scope>
+            			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/sae-local-1.1.0.jar</systemPath>
+                </dependency>
+                <dependency>
+					<groupId>org.codehaus.jackson</groupId>
+					<artifactId>jackson-core-asl</artifactId>
+					<version>${jacksonVersion}</version>
+				</dependency>
+				
+				<dependency>
+					<groupId>org.codehaus.jackson</groupId>
+					<artifactId>jackson-jaxrs</artifactId>
+					<version>${jacksonVersion}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.codehaus.jackson</groupId>
+					<artifactId>jackson-core-asl</artifactId>
+					<version>1.8.2</version>
+				</dependency>
+				<dependency>
+					<groupId>org.codehaus.jackson</groupId>
+					<artifactId>jackson-mapper-asl</artifactId>
+					<version>1.8.2</version>
+					<type>jar</type>
+					<scope>compile</scope>
+				</dependency>
+        </dependencies>
+
+        <build>
+        <finalName>apollov1</finalName>
+        <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<configuration>
+					<argLine>${maven.test.jvmargs}</argLine>
+					<includes>
+						<include>**/*Test.java</include>
+					</includes>
+					<excludes>
+						<exclude>**/BaseControllerTest.java</exclude>
+						<exclude>**/BaseTest.java</exclude>
+						<exclude>**/TestUtils.java</exclude>
+					</excludes>
+
+				</configuration>
+			</plugin>
+            <plugin>
+                                <groupId>org.mortbay.jetty</groupId>
+                                <artifactId>jetty-maven-plugin</artifactId>
+                                <version>8.1.10.v20130312</version>
+                                <configuration>
+                                        <webAppConfig>
+                                                <contextPath>/</contextPath>
+                                        </webAppConfig>
+                                        <systemProperties>
+                                                <systemProperty>
+                                                        <name>spring.profiles.active</name>
+                                                        <value>dev</value>
+                                                </systemProperty>
+                                        </systemProperties>
+                                        <stopKey>jetty-stop</stopKey>
+                                        <stopPort>9966</stopPort>
+                                </configuration>
+                                <executions>
+                                        <execution>
+                                                <id>start-jetty</id>
+                                                <phase>pre-integration-test</phase>
+                                                <goals>
+                                                        <goal>run</goal>
+                                                </goals>
+                                                <configuration>
+                                                        <scanIntervalSeconds>0</scanIntervalSeconds>
+                                                        <daemon>true</daemon>
+                                                        <useTestClasspath>true</useTestClasspath>
+                                                        <systemProperties>
+                                                                <systemProperty>
+                                                                        <name>spring.profiles.active</name>
+                                                                        <value>test</value>
+                                                                </systemProperty>
+                                                        </systemProperties>
+                                                </configuration>
+                                        </execution>
+                                        <execution>
+                                                <id>stop-jetty</id>
+                                                <phase>post-integration-test</phase>
+                                                <goals>
+                                                        <goal>stop</goal>
+                                                </goals>
+                                        </execution>
+                                </executions>
+                        </plugin>
+                </plugins>
+        </build>
 </project>
